# hospital-robot-nav

./: .gitignore
my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: my_robot_gazebo.launch.xml
my_robot_bringup/worlds/: test_world.sdf
my_robot_description/: package.xml
my_robot_description/launch/: display.launch.xml
my_robot_description/urdf/: arm.xacro  arm_gazebo.xacro  camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
spatial_maps/: CMakeLists.txt  README.md  package.xml
spatial_maps/config/: floor_config.yaml  gz_bridge_1f.yaml  nav2_params.yaml  spatial_maps_1f.rviz
spatial_maps/launch/: floor_10f.launch.py  floor_11f.launch.py  floor_12f.launch.py  floor_13f.launch.py  floor_14f.launch.py  floor_1f.launch.py  floor_2f.launch.py  floor_3f.launch.py  floor_4f.launch.py  floor_5f.launch.py  floor_6f.launch.py  floor_7f.launch.py  floor_8f.launch.py  floor_9f.launch.py  floor_b1f.launch.py  multi_robot_simulation.launch.py  spatial_maps_1f.launch.py
spatial_maps/maps/: 10F.yaml  11F.yaml  12F.yaml  13F.yaml  14F.yaml  1F.yaml  2F.yaml  3F.yaml  4F.yaml  5F.yaml  6F.yaml  7F.yaml  8F.yaml  9F.yaml  B1F.yaml  index.yaml
spatial_maps/meshes/: floor_1F.glb  floor_1F_walls_only.mtl
spatial_maps/network/: network_10f.json  network_11f.json  network_12f.json  network_13f.json  network_14f.json  network_1f.json  network_2f.json  network_3f.json  network_4f.json  network_5f.json  network_6f.json  network_7f.json  network_8f.json  network_9f.json  network_b1f.json  summary.yaml
spatial_maps/scripts/: joint_state_relay.py  map_publisher_node.py  network_navigation_node.py  odom_tf_republisher.py  poi_click_node.py  poi_nav_node.py  poi_publisher_node.py  sweep_test.py
spatial_maps/worlds/: 10f.world  11f.world  12f.world  13f.world  14f.world  1f.world  2f.world  3f.world  4f.world  5f.world  6f.world  7f.world  8f.world  9f.world  b1f.world
